8170395: Metaspace initialization queries the wrong chunk freelist

Reviewed-by: stuefe, stefank